added details view for own cards

--- a/front-end/lib/lists/new/view.html
+++ b/front-end/lib/lists/new/view.html
@@ -27,6 +27,10 @@
       <input type="text" placeholder="+ Add Item" focus-on="item" ng-change="changed(item)" ng-model="item.name" />
     </div>
 
+    <p>Pledge:</p>
+
+    <input type="number" ng-model="list.pledge" />
+
     <button class="btn btn-positive btn-block" type="submit">Create List</button>
   </form>
 
