--- a/front-end/lib/shopping-list/view.html
+++ b/front-end/lib/shopping-list/view.html
@@ -10,7 +10,7 @@
 
   <!-- a card -->
   <div ng-if="subscribedLists.length > 0" ng-repeat="subscribedList in subscribedLists">
-    <ul class="table-view">
+    <ul class="table-view shopping-list-table-view">
       <li class="table-view-cell table-view-divider">{{subscribedList.creator.name}}</li>
       <li class="table-view-cell media" ng-click="toggleSelected(item)" ng-repeat="item in subscribedList.items">
         <span class="media-object pull-left">
