--- a/front-end/lib/lists/details/view.html
+++ b/front-end/lib/lists/details/view.html
@@ -27,7 +27,7 @@
       <input type="text" placeholder="+ Add Item" focus-on="item" ng-change="changed(item)" ng-model="item.name" />
     </div>
 
-    <a class="btn btn-positive btn-block">Pay Bringster</a>
+    <a class="btn btn-primary btn-block">Pay {{list.pledge.toFixed(2)}}€</a>
     <a class="btn btn-negative btn-block btn-outlined">Drop List</a>
   </form>
 
