--- a/front-end/lib/skeleton/nav.html
+++ b/front-end/lib/skeleton/nav.html
@@ -12,7 +12,7 @@
     <span class="icon"><i class="fa fa-list-ul"></i><span class="badge badge-negative">4</span></span>
     <span class="tab-label">Shopping List</span>
   </a>
-  <a class="tab-item" rt-toggle-modal="settings" href>
+  <a class="tab-item" ng-class="{ active: isActive('/settings') }"  rt-navigation-push href="/settings" href>
     <span class="icon"><i class="fa fa-cog"></i></span>
     <span class="tab-label">Settings</span>
   </a>
