--- a/front-end/lib/lists/details/view.html
+++ b/front-end/lib/lists/details/view.html
@@ -1,7 +1,7 @@
 <!-- le header -->
 <header class="bar bar-nav">
   <a class="icon icon-left-nav pull-left" href rt-navigation-pop></a>
-  <h1 class="title">New List</h1>
+  <h1 class="title">Details</h1>
 </header>
 <!-- /le header -->
 
