--- a/front-end/lib/settings/view.html
+++ b/front-end/lib/settings/view.html
@@ -8,20 +8,20 @@
 <!-- le content -->
 <div class="content content-settings">
 
-  <h4 class="ui-settings">Address</h4>
+  <h4 class="content-margin">Address</h4>
   <div class="input-group input-group-settings">
     <input type="text" placeholder="Full name" ng-model="profile.fullname">
     <input type="text" placeholder="Street" ng-model="profile.street">
     <input type="text" placeholder="Zipcode" ng-model="profile.zip">
   </div>
-  <a class="btn btn-positive btn-block ui-settings">Save</a>
+  <a class="btn btn-positive btn-block content-margin">Save</a>
 
-  <h4 class="ui-settings">PayPal</h4>
+  <h4 class="content-margin">PayPal</h4>
   <div class="input-group input-group-settings">
     <input type="email" placeholder="Email" ng-model="profile.email">
     <input type="password" placeholder="Password" ng-model="profile.password">
   </div>
-  <a class="btn btn-primary btn-block ui-settings">Sign in</a>
+  <a class="btn btn-primary btn-block content-margin">Sign in</a>
 
 </div>
 <!-- /le content
