--- a/server/src/main/webapp/mobile/lib/index.html
+++ b/server/src/main/webapp/mobile/lib/index.html
@@ -24,6 +24,6 @@
 
     <div rt-view></div>
 
-    <script src="bringste.js"></script>
+    <script src="mobile/dist/bringste.js"></script>
   </body>
 </html>
