add marker to maps

--- a/server/src/main/webapp/mobile/lib/discover/map/view.html
+++ b/server/src/main/webapp/mobile/lib/discover/map/view.html
@@ -20,7 +20,7 @@
 
   <!-- le map -->
   <div class="map-wrapper">
-    <div class="map" bste-map></div>
+    <div class="map" bste-map entries="shoppingLists"></div>
   </div>
 
 </div>
