--- a/server/src/main/webapp/mobile/lib/discover/view.html
+++ b/server/src/main/webapp/mobile/lib/discover/view.html
@@ -27,12 +27,12 @@
     <div class="card card-small card-checkable">
       <ul class="table-view" ng-click="toggleExpansion(entry)">
         <li class="table-view-cell">
-          <img class="media-object pull-left" ng-src="{{ entry.creator.imageUrl }}">
+          <img class="media-object pull-left" ng-src="{{ entry.creator.avatarUrl }}">
           <div class="content-horizontally-padded pull-left">
             <p>{{ entry.creator.name }}</p>
             <p>{{ entry.targetLocation.name }}</p>
           </div>
-          <span class="badge badge-positive badge-inverted badge-top-aligned pull-right">{{ entry.reward.toFixed(2) }}€</span>
+          <span class="badge badge-positive badge-inverted badge-top-aligned pull-right">{{ entry.tipAmount.toFixed(2) }}€</span>
         </li>
       </ul>
     </div>
