chore(project): add angular routing

--- a/server/src/main/webapp/mobile/lib/discover/map/view.html
+++ b/server/src/main/webapp/mobile/lib/discover/map/view.html
@@ -8,7 +8,7 @@
 <!-- le content presentation selector -->
 <nav class="bar bar-standard bar-header-secondary">
   <div class="segmented-control">
-    <a class="control-item" rt-navigation-push href="/discover">List</a>
+    <a class="control-item" rt-nav-push href="/discover">List</a>
     <a class="control-item active">Map</a>
   </div>
 </nav>
