--- a/server/src/main/webapp/mobile/lib/discover/view.html
+++ b/server/src/main/webapp/mobile/lib/discover/view.html
@@ -9,7 +9,7 @@
 <nav class="bar bar-standard bar-header-secondary">
   <div class="segmented-control">
     <a class="control-item active">List</a>
-    <a class="control-item" rt-navigation-push href="/discover/map">Map</a>
+    <a class="control-item" rt-nav-push href="/discover/map">Map</a>
   </div>
 </nav>
 <!-- /le content presentation selector -->
@@ -63,7 +63,7 @@
   <p class="blankslate" ng-if="bringRequests.length == 0" >
     <span class="blankslateHeadline">No requests to show</span>
     <span>There are currently no requests around you.</span>
-    <span>Start over by creating a <a rt-navigation-push href="/lists/new">new List</a></span>
+    <span>Start over by creating a <a rt-nav-push href="/lists/new">new List</a></span>
     <span>or just take a nap.</span>
   </p>
   <!-- /le blankslate -->
