--- a/server/src/main/webapp/mobile/lib/index.html
+++ b/server/src/main/webapp/mobile/lib/index.html
@@ -22,7 +22,7 @@
   <body>
     <div bste-nav></div>
 
-    <div rt-view></div>
+    <div ng-view></div>
 
     <script src="mobile/dist/bringste.js"></script>
   </body>
