--- a/server/src/main/webapp/mobile/lib/lists/details/view.html
+++ b/server/src/main/webapp/mobile/lib/lists/details/view.html
@@ -1,6 +1,6 @@
 <!-- le header -->
 <header class="bar bar-nav">
-  <a class="icon icon-left-nav pull-left" href rt-navigation-pop></a>
+  <a class="icon icon-left-nav pull-left" href rt-nav-pop></a>
   <h1 class="title">Details</h1>
 </header>
 <!-- /le header -->
