--- a/server/src/main/webapp/mobile/lib/shopping-list/view.html
+++ b/server/src/main/webapp/mobile/lib/shopping-list/view.html
@@ -31,7 +31,7 @@
   <p class="blankslate" ng-if="subscribedLists.length == 0" >
     <span class="blankslateHeadline">Empty shopping list</span>
     <span>There are no items scheduled for purchase.</span>
-    <span><a rt-navigation-push href="/discover">Discover</a> some lists and deliver items to people around you.</span>
+    <span><a rt-nav-push href="/discover">Discover</a> some lists and deliver items to people around you.</span>
   </p>
   <!-- /le blankslate -->
 
