feat(client): introduce api

--- a/server/src/main/webapp/mobile/lib/discover/map/view.html
+++ b/server/src/main/webapp/mobile/lib/discover/map/view.html
@@ -1,6 +1,6 @@
 <!-- le header -->
 <header class="bar bar-nav">
-  <h1 class="title">Discover</h1>
+  <h1 class="title">Bring it!</h1>
 </header>
 <!-- /le header -->
 
@@ -16,12 +16,10 @@
 
 
 <!-- le content -->
-<div class="content">
+<div class="content map">
 
   <!-- le map -->
-  <div class="map-wrapper">
-    <div class="map" bste-map entries="shoppingLists"></div>
-  </div>
+  <div bste-map entries="shoppingLists"></div>
 
 </div>
 <!-- /le content -->
