--- a/server/src/main/webapp/mobile/lib/skeleton/nav.html
+++ b/server/src/main/webapp/mobile/lib/skeleton/nav.html
@@ -4,7 +4,7 @@
     <span class="icon"><i class="fa fa-home"></i></span>
     <span class="tab-label">My Lists</span>
   </a>
-  <a class="tab-item" ng-class="{ active: isActive('/discover') }" rt-nav-push href="/discover">
+  <a class="tab-item" ng-class="{ active: isActive('/discover') }" rt-nav-push href="/discover/map">
     <span class="icon"><i class="fa fa-map-marker"></i></span>
     <span class="tab-label">Bring it!</span>
   </a>
