--- a/server/src/main/webapp/mobile/lib/lists/view.html
+++ b/server/src/main/webapp/mobile/lib/lists/view.html
@@ -52,8 +52,8 @@ le header -->
   <p class="blankslate" ng-if="lists.length == 0" >
     <span class="blankslateHeadline">No Lists to show</span>
     <span>You don't have any shared lists so far.</span>
-    <span>Start by creating a <a rt-nav-push href="/lists/new">new List</a></span>
-    <span>or <a rt-nav-push href="/discover">discover</a> other lists.</span>
+    <span>Start by creating a <a rt-nav-push href="/lists/new">new to-buy list</a></span>
+    <span>or <a rt-nav-push href="/discover">bring stuff for others</a>.</span>
   </p>
   <!-- /le blankslate -->
 
