implemented 3steps design

--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -22,11 +22,17 @@
                     <div class="logo"></div>
                     <p><a href="index.html">Home</a></p>
                 </div>
-                <h1>Social shopping with #bringste!</h1>
+                <h1>Shopping reinvented!</h1>
             </div>
             <div class="card card-text">
-                <h2>bringste is a app where you add items that you currently need, so they can be fetched up by someone nearby who will bring / deliver them to a place defined by you. </h2>
-                <h4>bringste automatically matches shopping lists newar to you. </h4>
+            <div class="step"><h2><b>1.</b> Create a list of items.</h2>
+                <h4>Add latest possible due date and address of delivery.</h4></div>
+            <div class="step step-middle"><h2><b>2.</b> One discovers lists nearby.</h2>
+                <h4>Bringster is automatically matching you geo location against possible bringings.</h4></div>
+            <div class="step"><h2><b>3.</b> One is getting payed.</h2>
+                <h4>Transactions are executed via PayPal. Receipts are populated via Sendgrid.</h4></div>
+            </div>
+            <div class="laststep">
                 <a class="appStore" href="http://apple.com/"></a>
             </div>
         </div>
