--- a/server/src/main/webapp/mobile/lib/lists/view.html
+++ b/server/src/main/webapp/mobile/lib/lists/view.html
@@ -23,7 +23,7 @@ le header -->
 
           <a class="navigate-right">
             <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
-            <div class="content-horizontally-padded pull-left">
+            <div class="media-body">
               <p>List for {{ list.sourceLocation.name }}</p>
               <p>{{ list.assignee ? 'assigned to ' + list.assignee.login : 'Open' }}</p>
             </div>
