--- a/server/src/main/webapp/mobile/lib/shopping-list/view.html
+++ b/server/src/main/webapp/mobile/lib/shopping-list/view.html
@@ -69,7 +69,7 @@
       <ul class="table-view" ng-click="toggleExpansion(entry)">
         <li class="table-view-cell">
           <img class="media-object pull-left" ng-src="{{ entry.creator.avatarUrl }}">
-          <div class="content-horizontally-padded pull-left">
+          <div class="media-body pull-left">
             <p>{{ entry.creator.name }}</p>
             <p>{{ entry.targetLocation.name }}</p>
           </div>
