--- a/server/src/main/webapp/mobile/lib/discover/view.html
+++ b/server/src/main/webapp/mobile/lib/discover/view.html
@@ -31,7 +31,7 @@
       <ul class="table-view">
         <li class="table-view-cell">
           <img class="media-object pull-left" ng-src="{{ entry.creator.avatarUrl }}">
-          <div class="content-horizontally-padded pull-left">
+          <div class="media-body">
             <p>{{ entry.creator.name }}</p>
             <p>from {{entry.sourceLocation.name}} to {{ entry.targetLocation.name }}</p>
           </div>
@@ -56,7 +56,10 @@
 
     <!-- cards metadata  -->
     <div class="checkbox-wrapper">
-      <div class="checkbox" ng-class="{ 'checkbox-checked': entry.selected === true }" ng-click="toggleSelected(entry)">
+      <div class="checkbox"
+           ng-class="{ 'checkbox-checked': entry.reserved === true }"
+           ng-click="toggleReserved(entry)">
+
         <div class="checkmark">
           <i class="fa fa-check"></i>
         </div>
