fix(client): payment and list layout

--- a/server/src/main/webapp/mobile/lib/lists/view.html
+++ b/server/src/main/webapp/mobile/lib/lists/view.html
@@ -39,7 +39,7 @@ le header -->
       <ul class="table-view">
         <li class="table-view-cell">
           <div class="content-image-padded pull-left">
-          <p><p ng-repeat="item in list.items"><span ng-if="!$first">, </span>{{ item.name }}</p></p>
+          <p><span ng-repeat="item in list.items"><span ng-if="!$first">, </span>{{ item.name }}</span></p>
           </div>
         </li>
       </ul>
