--- a/server/src/main/webapp/mobile/lib/shopping-list/view.html
+++ b/server/src/main/webapp/mobile/lib/shopping-list/view.html
@@ -59,44 +59,41 @@
 <div class="content" ng-if="view == 'grouped'">
 
   <!-- a card -->
-  <div class="card-wrapper"
-       ng-show="shoppingLists.length > 0"
-       ng-repeat="entry in shoppingLists"
-       ng-class="{ 'card-wrapper-active': entry.expanded === true }">
+  <div class="card-wrapper card-wrapper-active"
+       rt-nav-push ng-href="/lists/{{ list.id }}"
+       ng-if="shoppingLists.length > 0"
+       ng-repeat="list in shoppingLists"
+       ng-class="{ 'card-fadeout': list.isDelivered === true }">
 
     <!-- cards metadata  -->
-    <div class="card card-small card-checkable">
-      <ul class="table-view" ng-click="toggleExpansion(entry)">
+    <div class="card card-checkable">
+      <ul class="table-view">
         <li class="table-view-cell">
-          <img class="media-object pull-left" ng-src="{{ entry.creator.avatarUrl }}">
-          <div class="media-body pull-left">
-            <p>{{ entry.creator.name }}</p>
-            <p>{{ entry.targetLocation.name }}</p>
-          </div>
-          <span class="badge badge-positive badge-inverted badge-top-aligned pull-right">{{ entry.tipAmount.toFixed(2) }}€</span>
+
+          <a class="navigate-right">
+            <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
+            <div class="media-body">
+              <p>List for {{ list.sourceLocation.name }}</p>
+              <p>{{ list.assignee ? 'assigned to ' + list.assignee.login : 'Open' }}</p>
+            </div>
+            <span class="badge badge-inverted badge-top-aligned pull-right"
+                        ng-class="{ 'badge-positive': list.isPayed === true, 'badge-negative': list.isPayed === false }">{{ list.tipAmount.toFixed(2) }}€</span>
+          </a>
         </li>
       </ul>
     </div>
 
     <!-- cards list contents  -->
-    <div class="card card-small card-list">
-      <ul class="table-view" ng-click="toggleExpanded(entry)">
+    <div class="card card-list">
+      <ul class="table-view">
         <li class="table-view-cell">
           <div class="content-image-padded pull-left">
-          <p><span ng-repeat="item in entry.items"><span ng-if="!$first">, </span>{{ item.name }}</span></p>
+          <p><span ng-repeat="item in list.items"><span ng-if="!$first">, </span>{{ item.name }}</span></p>
           </div>
         </li>
       </ul>
     </div>
 
-    <!-- cards metadata  -->
-    <div class="checkbox-wrapper">
-      <div class="checkbox" ng-class="{ 'checkbox-checked': entry.selected === true }" ng-click="toggleSelected(entry)">
-        <div class="checkmark">
-          <i class="fa fa-check"></i>
-        </div>
-      </div>
-    </div>
   </div>
   <!-- /a card -->
 
