--- a/server/src/main/webapp/mobile/lib/skeleton/nav.html
+++ b/server/src/main/webapp/mobile/lib/skeleton/nav.html
@@ -10,11 +10,7 @@
   </a>
   <a class="tab-item" ng-class="{ active: isActive('/shopping-list') }" rt-nav-push href="/shopping-list">
     <span class="icon"><i class="fa fa-list-ul"></i></span>
-    <span class="tab-label">Shopping List</span>
-  </a>
-  <a class="tab-item" ng-class="{ active: isActive('/settings') }"  rt-nav-push href="/settings" href>
-    <span class="icon"><i class="fa fa-cog"></i></span>
-    <span class="tab-label">Settings</span>
+    <span class="tab-label">Shop / Deliver</span>
   </a>
 </nav>
 <!-- /le nav -->
